Toolbar/pathbar: fix overflow when window is very small (#303)
Also restored default color on left panel titles: contrast was too small.

--- a/src/css/favoritesPanel.css
+++ b/src/css/favoritesPanel.css
@@ -15,8 +15,7 @@
 }
 
 .favoritesPanel .bp4-tree-node-content-0 {
-    color:#5c7080;
-    pointer-events:none;
+    pointer-events: none;
 }
 
 .favoritesPanel .bp4-tree-node-content-0:hover {
